[gd_scene load_steps=4 format=3 uid="uid://yk0xwhddtvdv"]

[ext_resource type="Script" path="res://scripts/GameMaster.gd" id="1_3onj2"]
[ext_resource type="PackedScene" uid="uid://cnvfcqqhax6hi" path="res://scenes/gameloop/TopView.tscn" id="2_wbco8"]
[ext_resource type="PackedScene" uid="uid://cd1nlmj68a3qg" path="res://scenes/gameloop/BottomView.tscn" id="3_oaxxn"]

[node name="GameLoop" type="Node2D"]
script = ExtResource("1_3onj2")

[node name="Boiler" parent="." instance=ExtResource("3_oaxxn")]
position = Vector2(-1, 175)

[node name="Top" parent="." instance=ExtResource("2_wbco8")]

[connection signal="queue_full" from="Boiler" to="Top" method="_on_boiler_queue_full"]
[connection signal="alchemist_current_hearts" from="Top" to="." method="_on_top_alchemist_current_hearts"]
[connection signal="alchemist_has_died" from="Top" to="." method="_on_top_alchemist_has_died"]
[connection signal="enemie_spawned" from="Top" to="." method="_on_top_enemie_spawned"]
